--- a/meta/main.yml
+++ b/meta/main.yml
@@ -46,6 +46,9 @@ galaxy_info:
   # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
   #       Maximum 20 tags per role.
 
-  dependencies: [ ]
+  dependencies:
+    - src: git+https://github.com/GFNRussia/letsencrypt-renewer.git
+      name: letsencrypt-renewer
+    - src: geerlingguy.swap
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
